# Scholomance

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.railway  PLAN.md  PROMPT.md  RALPH_GUIDE.md  README.md  SCRAPER_ERRORS.md  SCRAPER_PLAN.md  alembic.ini  build_dashboard.sh  docker-compose.yml  fix_scrapers.sh  pyproject.toml  railway.toml  ralph.sh  requirements-api.txt  requirements.txt  schema.sql
docs/: PRD-qa-review-tool.md  PRD-technology-opportunity-assessment.md  PRD-vercel-railway-deployment.md
docs/plans/: 2026-04-23-002-fix-migration-qa-drawer-parity-plan.md
docs/qa/: README.md  db-coverage-2026-04-23.json  db-coverage-2026-04-23.md  db-coverage-latest.json  migration-matrix-2026-04-23.json  migration-matrix-2026-04-23.md  migration-matrix-latest.md  samples-latest.json
docs/solutions/test-failures/: playwright-alive-check-regex-needle-fragile.md  playwright-soft-expect-never-throws.md
docs/solutions/ui-bugs/: parsedata-shape-variant-silent-drops.md
docs/visuals/: 2026-04-23-002-fix-migration-qa-drawer-parity-visual.html
migrations/: add_assessments.sql  env.py
migrations/versions/: 20240101_000000_001_initial_schema.py  20240201_000000_002_add_patent_status.py
scripts/: debug_duke.py  extract_flintbox_credentials.py  extract_flintbox_credentials_v2.py  init_db.sql  investigate_duke.py  investigate_duke_v2.py  investigate_duke_v3.py  investigate_duke_v4.py
src/: __init__.py  assessor.py  chat.py  classifier.py  cli.py  config.py  database.py  embedder.py  patent_detector.py  scheduler.py  taxonomy.py
src/api/: __init__.py  main.py  schemas.py
src/api/routes/: __init__.py  chat.py  opportunities.py  qa.py  stats.py  technologies.py
src/qa/: __init__.py  matrix.py  migration_audit.py  migration_sampler.py  production_run.py  section_catalog.py
src/scrapers/: __init__.py  base.py  buffalo.py  cmu.py  colorado.py  columbia.py  cornell.py  duke.py  flintbox_base.py  flintbox_parsing.py  gatech.py  harvard.py  iowa.py  jhu.py  louisville.py  michiganstate.py  minnesota.py  mit.py  northwestern.py  princeton.py  purdue.py  registry.py  rss_base.py  stanford.py  techpub_base.py  texasstate.py  ttu.py  ucf.py  uconn.py  ucsystem.py  uf.py  uga.py  uiuc.py  umich.py  unlv.py  upenn.py  usc.py  usu.py  utaustin.py  uw.py  (+2 more)
tasks/: completed_scrapers.md  scraper_fixes_roadmap.md  todo.md
tests/: __init__.py  conftest.py  test_classifier.py  test_cli.py  test_coverage_boost.py  test_database.py  test_database_extended.py  test_flintbox_base_detail.py  test_integration_mocks.py  test_patent_detector.py  test_phase3_scrapers.py  test_phase4.py  test_scheduler.py  test_scrapers.py  test_taxonomy.py
web/: .env.local.example  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts
web/e2e/: README.md  detail-page.spec.ts  drawer-parity.spec.ts  smoke.spec.ts
web/e2e/fixtures/: crash-detection.ts  section-selectors.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts  types.ts
web/src/assets/piedmont/: app.css  tokens.css
web/src/components/: ErrorBoundary.tsx
web/src/components/Browser/: FilterPanel.tsx  Pagination.tsx  TechnologyTable.tsx  index.ts
web/src/components/Chat/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx
web/src/components/Dashboard/: FieldChart.tsx  KeywordCloud.tsx  OverviewCards.tsx  TimelineChart.tsx  UniversityChart.tsx  index.ts
web/src/components/Detail/: AssessmentSection.tsx  ContentSections.tsx  IframeEmbed.tsx  MetadataPanel.tsx  RawDataViewer.tsx  SidePanel.tsx  index.ts  parseRawData.test-shapes.md  parseRawData.ts
web/src/components/Discovery/: DiscoveryDrawer.tsx  Facets.tsx  SearchBar.tsx  TechCard.tsx  index.ts
web/src/components/Layout/: Header.tsx  Icon.tsx  (+5 more)
web/src/hooks/: index.ts  useChat.ts  useOpportunities.ts  useStats.ts  useTechnologies.ts  useTechnology.ts
web/src/pages/: BrowserPage.tsx  DashboardPage.tsx  DetailPage.tsx  DiscoveryPage.tsx  OpportunitiesPage.tsx  QAPage.tsx  QAReviewPage.tsx  index.ts
web/src/utils/: universityNames.ts
(+8 files in other folders)
